Working with Text, foundations course

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>My personal page</title>
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <!-- this is a comment! u can use Ctrl + "/" to generate it -->
+    <h1>Welcome to my personal page !!</h1>
+    <h3>Bellow you will find some info about me...</h2>
+    <em><p>I am 25 year old professional from Greece working as a <strong>Data Engineer</strong> for Accenture!</p></em>  
+
+    <p>I hold a <strong>BSc in Economics</strong> from <b>University of Piraeus</b> and an <strong>MSc in Data Science and Analytics</strong> from Erasmus University Rotterdam.</p>
 </body>
 </html>
