Ordered and unordered lists

--- a/index.html
+++ b/index.html
@@ -11,6 +11,22 @@
     <h3>Bellow you will find some info about me...</h2>
     <em><p>I am 25 year old professional from Greece working as a <strong>Data Engineer</strong> for Accenture!</p></em>  
 
-    <p>I hold a <strong>BSc in Economics</strong> from <b>University of Piraeus</b> and an <strong>MSc in Data Science and Analytics</strong> from Erasmus University Rotterdam.</p>
+    <p>I hold a <strong>BSc in Economics</strong> from University of Piraeus and an <strong>MSc in Data Science and Analytics</strong> from Erasmus University Rotterdam.</p>
+
+    <!-- lets make ordered and unordered lists -->
+    <!-- Unordered lists are created using the <ul> element, and each item within the list is created using the list item element <li> -->
+    <p> My hobbies are...</p>
+        <ul>
+            <li>Jiu Jitsu</li>
+            <li>Gaming</li>
+            <li>Music Production</li>
+        </ul>
+    <!-- Ordered lists are created using the <ol> element. -->
+    <p> My top 3 favorite TV shows are...</p>
+        <ol>
+            <li>The Sopranos</li>
+            <li>Succession</li>
+            <li>Sons of Anarchy</li>
+        </ol>
 </body>
 </html>
