changes made to add links and pictures in our page, using also subfolders

--- a/odin-links-and-images/links-and-images.html
+++ b/odin-links-and-images/links-and-images.html
@@ -12,7 +12,9 @@
     <!-- What if we want to open links in a new tab?? -->
     <p><a href="https://www.theodinproject.com/about" target="_blank" rel="noopener noreferrer">About The Odin Project in a new tab!</a></p>
 
-    <p><a href="pages/about.html">About</a></p>
+    <p><a href="./pages/about.html">About</a></p>
+
+    <p><img src="./images/dog.jpg" , alt="Charles picture!",height="310" width="310"></p>
 </a>
 </body>
 </html>
